--- a/demos/ocean/BUILD.bazel
+++ b/demos/ocean/BUILD.bazel
@@ -1,15 +1,10 @@
 load("@rules_cc//cc:defs.bzl", "cc_library", "cc_binary")
-load("@fly//scripts/bazel/rules:copy_files_to_directory.bzl", "copy_files_to_directory")
 load("@fly//scripts/bazel/rules:glslang.bzl", "glsl_shader")
+load("@fly//scripts/bazel/rules:common.bzl", "copy_vulkan_layers", "copy_molten_vk")
+load("@fly//scripts/bazel/rules:copy_files_to_directory.bzl", "copy_files_to_directory")
 
-copy_files_to_directory(
-    name = "copy_vulkan_validation_layer",
-    srcs = [
-        "@vulkan_validation_layers//:VK_LAYER_KHRONOS_validation_json",
-        "@vulkan_validation_layers//:VK_LAYER_KHRONOS_validation",
-    ],
-    output_directory = ".",
-)
+copy_vulkan_layers()
+copy_molten_vk()
 
 copy_files_to_directory(
     name = "copy_scene_data",
@@ -17,13 +12,6 @@ copy_files_to_directory(
         "@ambientcg//:DaySkyHDRI051B_4K-TONEMAPPED.jpg",
     ],
     output_directory = ".",
-)
-
-config_setting(
-    name = "release_build",
-    values = {
-        "compilation_mode": "opt",
-    },
 )
 
 glsl_shader(
@@ -109,7 +97,6 @@ cc_binary(
         "//src/math:math",
         "//src/utils:utils",
         "//demos/common:simple_camera_fps",
-
     ],
     data = [
         ":sky.vert.spv",
@@ -122,7 +109,7 @@ cc_binary(
         ":ifft.comp.spv",
         ":jonswap.comp.spv",
     ] + select({
-        ":release_build": [
+        "@fly//scripts/bazel/build_type:release": [
         ],
         "//conditions:default": [
             ":copy_vulkan_validation_layer",
