--- a/demos/gaussian_splatting/BUILD.bazel
+++ b/demos/gaussian_splatting/BUILD.bazel
@@ -1,30 +1,10 @@
 load("@rules_cc//cc:defs.bzl", "cc_library", "cc_binary")
-load("@fly//scripts/bazel/rules:copy_files_to_directory.bzl", "copy_files_to_directory")
 load("@fly//scripts/bazel/rules:glslang.bzl", "glsl_shader", "glsl_library")
+load("@fly//scripts/bazel/rules:common.bzl", "copy_vulkan_layers", "copy_molten_vk")
+load("@fly//scripts/bazel/rules:copy_files_to_directory.bzl", "copy_files_to_directory")
 
-copy_files_to_directory(
-    name = "copy_vulkan_validation_layer",
-    srcs = [
-        "@vulkan_validation_layers//:VK_LAYER_KHRONOS_validation_json",
-        "@vulkan_validation_layers//:VK_LAYER_KHRONOS_validation",
-    ],
-    output_directory = ".",
-)
-
-config_setting(
-    name = "release_build",
-    values = {
-        "compilation_mode": "opt",
-    },
-)
-
-glsl_library(
-    name = "radix_sort_common",
-    hdrs = [
-        "radix_sort_common.glsl",
-    ],
-    visibility = ["//visibility:public"]
-)
+copy_vulkan_layers()
+copy_molten_vk()
 
 copy_files_to_directory(
     name = "copy_scene_data",
@@ -40,6 +20,14 @@ copy_files_to_directory(
         "@splat_sample_scenes//:treehill.splat",
     ],
     output_directory = ".",
+)
+
+glsl_library(
+    name = "radix_sort_common",
+    hdrs = [
+        "radix_sort_common.glsl",
+    ],
+    visibility = ["//visibility:public"]
 )
 
 glsl_shader(
@@ -136,10 +124,15 @@ cc_binary(
         ":splat.frag.spv",
         ":copy_scene_data",
     ] + select({
-        ":release_build": [
+        "@fly//scripts/bazel/build_type:release": [
         ],
         "//conditions:default": [
             ":copy_vulkan_validation_layer",
         ],
+    }) + select({
+        "@platforms//os:osx": [
+            ":copy_molten_vk",
+	],
+        "//conditions:default": [],
     }),
 )
