--- a/demos/indirect_draw/BUILD.bazel
+++ b/demos/indirect_draw/BUILD.bazel
@@ -1,22 +1,10 @@
 load("@rules_cc//cc:defs.bzl", "cc_library", "cc_binary")
-load("@fly//scripts/bazel/rules:copy_files_to_directory.bzl", "copy_files_to_directory")
 load("@fly//scripts/bazel/rules:glslang.bzl", "glsl_shader")
+load("@fly//scripts/bazel/rules:common.bzl", "copy_vulkan_layers", "copy_molten_vk")
+load("@fly//scripts/bazel/rules:copy_files_to_directory.bzl", "copy_files_to_directory")
 
-copy_files_to_directory(
-    name = "copy_vulkan_validation_layer",
-    srcs = [
-        "@vulkan_validation_layers//:VK_LAYER_KHRONOS_validation_json",
-        "@vulkan_validation_layers//:VK_LAYER_KHRONOS_validation",
-    ],
-    output_directory = ".",
-)
-
-config_setting(
-    name = "release_build",
-    values = {
-        "compilation_mode": "opt",
-    },
-)
+copy_vulkan_layers()
+copy_molten_vk()
 
 copy_files_to_directory(
     name = "copy_scene_data",
@@ -66,11 +54,16 @@ cc_binary(
         ":cull.comp.spv",
         ":copy_scene_data",
     ] + select({
-        ":release_build": [
+        "@fly//scripts/bazel/build_type:release": [
         ],
         "//conditions:default": [
             ":copy_vulkan_validation_layer",
         ],
+    }) + select({
+        "@platforms//os:osx": [
+            ":copy_molten_vk",
+        ],
+        "//conditions:default": [],
     }),
 )
 
