--- a/src/assets/BUILD.bazel
+++ b/src/assets/BUILD.bazel
@@ -1,46 +1,6 @@
 load("@rules_cc//cc:defs.bzl", "cc_library")
 
 cc_library(
-    name = "import_image",
-    hdrs = [
-        "image.h",
-        "import_image.h",
-    ],
-    srcs = [
-        "import_image.cpp",
-    ],
-    includes = [".."],
-    deps = [
-        "//src/core:core",
-        "@stb//:stb_image",
-    ],
-    visibility = ["//visibility:public"],
-)
-
-cc_library(
-    name = "export_image",
-    hdrs = [
-        "image.h",
-        "export_image.h",
-        "transform_image.h",
-        "compress_image.h",
-    ],
-    srcs = [
-        "compress_image.cpp",
-        "transform_image.cpp",
-        "export_image.cpp",
-    ],
-    includes = [".."],
-    deps = [
-        "//src/core:core",
-        "@stb//:stb_image_write",
-        "@stb//:stb_dxt",
-        "@stb//:stb_image_resize2",
-    ],
-    visibility = ["//visibility:public"],
-)
-
-cc_library(
     name = "import_spv",
     hdrs = [
         "import_spv.h",
@@ -87,24 +47,13 @@ cc_library(
     visibility = ["//visibility:public"],
 )
 
-cc_library(
-    name = "import",
-    deps = [
-        ":import_obj",
-        ":import_gltf",
-        ":import_image",
-    ],
-    visibility = ["//visibility:public"],
-)
+# cc_library(
+#     name = "import",
+#     deps = [
+#         ":import_obj",
+#         ":import_gltf",
+#         "//src/assets/image:import_image",
+#     ],
+#     visibility = ["//visibility:public"],
+# )
 
-cc_binary(
-    name = "cooker",
-    srcs = [
-        "cooker.cpp",
-    ],
-    deps = [
-        ":import_image",
-        ":export_image",
-    ],
-    visibility = ["//visibility:public"],
-)
