fix (image): exporting compressed cubemap with mips

--- a/demos/ocean/BUILD.bazel
+++ b/demos/ocean/BUILD.bazel
@@ -15,7 +15,7 @@ cook_images(
     outputs = [
         "DaySkyHDRI051B_4K-TONEMAPPED.fbc1",
     ],
-    generate_mips = False,
+    generate_mips = True,
     eq2cube = True,
 )
 
