scratch (atmosphere): tweak uniforms in imgui

--- a/demos/atmosphere/BUILD.bazel
+++ b/demos/atmosphere/BUILD.bazel
@@ -52,6 +52,7 @@ cc_binary(
         "//src/rhi:context",
         "//src/utils:utils",
         "//demos/common:simple_camera_fps",
+        "@imgui//:imgui",
     ],
     data = [
         ":screen_quad.vert.spv",
