--- a/demos/irradiance_map/BUILD.bazel
+++ b/demos/irradiance_map/BUILD.bazel
@@ -10,16 +10,14 @@ copy_molten_vk()
 cook_images(
     name = "cook_skyboxes",
     inputs = [
+        "@ambientcg//:NightEnvironmentHDRI009_4K-HDR.exr",
         "@ambientcg//:DaySkyHDRI051B_4K-TONEMAPPED.jpg",
         "@ambientcg//:DayEnvironmentHDRI052_4K-TONEMAPPED.jpg",
         "@ambientcg//:IndoorEnvironmentHDRI016_4K-TONEMAPPED.jpg",
         "@ambientcg//:DayEnvironmentHDRI078_4K-TONEMAPPED.jpg",
     ],
     outputs = [
-        "Sky.fbc1",
-        "Street.fbc1",
-        "Indoor.fbc1",
-        "Forest.fbc1",
+        "Night.png",
     ],
     generate_mips = True,
     eq2cube = True,
