scratch (atmosphere): computing sky irradiance

--- a/demos/atmosphere/BUILD.bazel
+++ b/demos/atmosphere/BUILD.bazel
@@ -28,6 +28,30 @@ glsl_shader(
 )
 
 glsl_shader(
+    name = "sample_cubemap.vert.spv",
+    src = "sample_cubemap.vert",
+    deps = [
+        "//demos/common:glsl_bindless",
+    ],
+)
+
+glsl_shader(
+    name = "sample_cubemap.frag.spv",
+    src = "sample_cubemap.frag",
+    deps = [
+        "//demos/common:glsl_bindless",
+    ],
+)
+
+glsl_shader(
+    name = "irradiance_map.frag.spv",
+    src = "irradiance_map.frag",
+    deps = [
+        "//demos/common:glsl_bindless",
+    ],
+)
+
+glsl_shader(
     name = "transmittance_lut.comp.spv",
     src = "transmittance_lut.comp",
     deps = [
@@ -48,6 +72,15 @@ glsl_shader(
 glsl_shader(
     name = "skyview_lut.comp.spv",
     src = "skyview_lut.comp",
+    deps = [
+        ":atmosphere_common",
+        "//demos/common:glsl_bindless",
+    ],
+)
+
+glsl_shader(
+    name = "project_skyview_radiance.comp.spv",
+    src = "project_skyview_radiance.comp",
     deps = [
         ":atmosphere_common",
         "//demos/common:glsl_bindless",
@@ -77,9 +110,13 @@ cc_binary(
     data = [
         ":screen_quad.vert.spv",
         ":screen_quad.frag.spv",
+        ":sample_cubemap.vert.spv",
+        ":sample_cubemap.frag.spv",
+        ":irradiance_map.frag.spv",
         ":transmittance_lut.comp.spv",
         ":multiscattering_lut.comp.spv",
         ":skyview_lut.comp.spv",
+        ":project_skyview_radiance.comp.spv",
         ":terrain_scene.frag.spv",
     ] + select({
         "@fly//scripts/bazel/build_type:release": [],
