--- a/demos/atmosphere/BUILD.bazel
+++ b/demos/atmosphere/BUILD.bazel
@@ -79,6 +79,15 @@ glsl_shader(
 )
 
 glsl_shader(
+    name = "average_horizon_luminance.comp.spv",
+    src = "average_horizon_luminance.comp",
+    deps = [
+        ":atmosphere_common",
+        "//demos/common:glsl_bindless",
+    ],
+)
+
+glsl_shader(
     name = "project_skyview_radiance.comp.spv",
     src = "project_skyview_radiance.comp",
     deps = [
@@ -117,6 +126,7 @@ cc_binary(
         ":multiscattering_lut.comp.spv",
         ":skyview_lut.comp.spv",
         ":project_skyview_radiance.comp.spv",
+        ":average_horizon_luminance.comp.spv",
         ":terrain_scene.frag.spv",
     ] + select({
         "@fly//scripts/bazel/build_type:release": [],
