--- a/src/assets/image/BUILD.bazel
+++ b/src/assets/image/BUILD.bazel
@@ -1,4 +1,4 @@
-load("@rules_cc//cc:defs.bzl", "cc_library")
+load("@rules_cc//cc:defs.bzl", "cc_library", "cc_binary")
 
 cc_library(
     name = "import_image",
@@ -39,6 +39,19 @@ cc_library(
         "@stb//:stb_dxt",
         "@stb//:stb_image_resize2",
         "@tinyexr//:tinyexr",
+    ],
+    visibility = ["//visibility:public"],
+)
+
+cc_binary(
+    name = "cooker",
+    srcs = [
+        "cooker.cpp",
+    ],
+    includes = ["../.."],
+    deps = [
+        ":import_image",
+        ":export_image",
     ],
     visibility = ["//visibility:public"],
 )
