feat (assets): reindex geometry meshes

--- a/src/assets/geometry/BUILD.bazel
+++ b/src/assets/geometry/BUILD.bazel
@@ -12,6 +12,7 @@ cc_library(
         "//src/core:core",
         "//src/math:math",
         "@fast_obj//:fast_obj",
+        "@meshoptimizer//:meshoptimizer",
     ],
     includes = [
         "../..",
