feat (core): f16 half float type

--- a/src/core/BUILD.bazel
+++ b/src/core/BUILD.bazel
@@ -5,6 +5,9 @@ cc_library(
     hdrs = [
         "types.h",
     ],
+    srcs = [
+        "types.cpp",
+    ],
     visibility = ["//visibility:public"],
 )
 
