--- a/demos/lods/BUILD.bazel
+++ b/demos/lods/BUILD.bazel
@@ -43,6 +43,14 @@ glsl_shader(
     ],
 )
 
+glsl_shader(
+    name = "prefix_sum.comp.spv",
+    src = "prefix_sum.comp",
+    deps = [
+        "//demos/common:glsl_bindless",
+    ],
+)
+
 cc_binary(
     name = "app",
     srcs = [
@@ -59,6 +67,7 @@ cc_binary(
         ":lit.vert.spv",
         ":lit.frag.spv",
         ":cull.comp.spv",
+        ":prefix_sum.comp.spv",
     ] + select({
         "@fly//scripts/bazel/build_type:release": [
         ],
