--- a/demos/ray_tracing/BUILD.bazel
+++ b/demos/ray_tracing/BUILD.bazel
@@ -5,6 +5,14 @@ load("@fly//scripts/bazel/rules:common.bzl", "copy_vulkan_layers", "copy_molten_
 copy_vulkan_layers()
 copy_molten_vk()
 
+glsl_shader(
+    name = "ray_generation.rgen.spv",
+    src = "ray_generation.rgen",
+    deps = [
+        "//demos/common:glsl_bindless",
+    ],
+)
+
 cc_binary(
     name = "app",
     srcs = [
@@ -13,8 +21,10 @@ cc_binary(
     deps = [
         "//src/rhi:context",
         "//src/utils:utils",
+        "//demos/common:simple_camera_fps",
     ],
     data = [
+        "ray_generation.rgen.spv",
     ] + select({
         "@fly//scripts/bazel/build_type:release": [
         ],
