--- a/demos/ray_tracing/BUILD.bazel
+++ b/demos/ray_tracing/BUILD.bazel
@@ -13,6 +13,19 @@ glsl_shader(
     ],
 )
 
+glsl_shader(
+    name = "ray_closest_hit.rchit.spv",
+    src = "ray_closest_hit.rchit",
+    deps = [
+        "//demos/common:glsl_bindless"
+    ],
+)
+
+glsl_shader(
+    name = "ray_miss.rmiss.spv",
+    src = "ray_miss.rmiss",
+)
+
 cc_binary(
     name = "app",
     srcs = [
@@ -25,6 +38,8 @@ cc_binary(
     ],
     data = [
         "ray_generation.rgen.spv",
+        "ray_closest_hit.rchit.spv",
+        "ray_miss.rmiss.spv",
     ] + select({
         "@fly//scripts/bazel/build_type:release": [
         ],
