--- a/demos/ray_tracing/BUILD.bazel
+++ b/demos/ray_tracing/BUILD.bazel
@@ -22,6 +22,14 @@ glsl_shader(
 )
 
 glsl_shader(
+    name = "ray_intersection.rint.spv",
+    src = "ray_intersection.rint",
+    deps = [
+        "//demos/common:glsl_bindless",
+    ],
+)
+
+glsl_shader(
     name = "ray_miss.rmiss.spv",
     src = "ray_miss.rmiss",
 )
@@ -39,6 +47,7 @@ cc_binary(
     data = [
         "ray_generation.rgen.spv",
         "ray_closest_hit.rchit.spv",
+        "ray_intersection.rint.spv",
         "ray_miss.rmiss.spv",
     ] + select({
         "@fly//scripts/bazel/build_type:release": [
